--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "redis": "^4.6.7"
   },
   "devDependencies": {
